src/generated/java/com/shakelang/ideashakeplugin/grammar/ShakeParser.java
// Generated from /Users/nicolasschmidt/repositories/shakelang/idea-shake-plugin/src/main/kotlin/com/shakelang/ideashakeplugin/ShakeParser.g4 by ANTLR 4.13.1
package com.shakelang.ideashakeplugin.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ShakeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, LINE_SEPARATOR=2, SEMICOLON=3, COMMA=4, COLON=5, DOT=6, FLOAT=7, 
		HEX_NUMBER=8, OCT_NUMBER=9, BIN_NUMBER=10, INTEGER=11, KEYWORD_ABSTRACT=12, 
		KEYWORD_AS=13, KEYWORD_CLASS=14, KEYWORD_CONST=15, KEYWORD_CONSTRUCTOR=16, 
		KEYWORD_DO=17, KEYWORD_ELSE=18, KEYWORD_ENUM=19, KEYWORD_FALSE=20, KEYWORD_FINAL=21, 
		KEYWORD_FOR=22, KEYWORD_FUN=23, KEYWORD_IF=24, KEYWORD_IMPORT=25, KEYWORD_IN=26, 
		KEYWORD_INLINE=27, KEYWORD_INSTANCEOF=28, KEYWORD_INTERFACE=29, KEYWORD_NATIVE=30, 
		KEYWORD_NULL=31, KEYWORD_OBJECT=32, KEYWORD_OPERATOR=33, KEYWORD_OVERRIDE=34, 
		KEYWORD_PACKAGE=35, KEYWORD_PRIVATE=36, KEYWORD_PROTECTED=37, KEYWORD_PUBLIC=38, 
		KEYWORD_RETURN=39, KEYWORD_STATIC=40, KEYWORD_SUPER=41, KEYWORD_SYNCHRONIZED=42, 
		KEYWORD_THIS=43, KEYWORD_TRUE=44, KEYWORD_VAL=45, KEYWORD_VAR=46, KEYWORD_WHILE=47, 
		IDENTIFIER=48, IDENTIFIER2=49, STRING=50, CHAR=51, SINGLE_LINE_COMMENT=52, 
		MULTILINE_COMMENT=53, POW_ASSIGN=54, MOD_ASSIGN=55, DIV_ASSIGN=56, MUL_ASSIGN=57, 
		SUB_ASSIGN=58, ADD_ASSIGN=59, INCR=60, DECR=61, POW=62, MOD=63, DIV=64, 
		MUL=65, SUB=66, ADD=67, LOGIC_OR=68, LOGIC_AND=69, LOGIC_XOR=70, EQUALS=71, 
		GTE=72, LTE=73, NEQ=74, GT=75, LT=76, LOGIC_NOT=77, BIT_NAND=78, BIT_NOR=79, 
		BIT_XNOR=80, BIT_NOT=81, BIT_AND=82, BIT_OR=83, BIT_XOR=84, ASSIGN=85, 
		LPAREN=86, RPAREN=87, LCURLY=88, RCURLY=89, LBRACK=90, RBRACK=91;
	public static final int
		RULE_shakeIdentifier = 0, RULE_shakeModifier = 1, RULE_shakeModifierList = 2, 
		RULE_shakeNamespace = 3, RULE_shakeType = 4, RULE_genericDeclaration = 5, 
		RULE_genericsDeclaration = 6, RULE_funArgs = 7, RULE_funArgDeclaration = 8, 
		RULE_shakeBlock = 9, RULE_shakeBlockChild = 10, RULE_shakeArgument = 11, 
		RULE_shakeArguments = 12, RULE_shakeTypeArgument = 13, RULE_shakeTypeArguments = 14, 
		RULE_shakeFile = 15, RULE_shakeFileChild = 16, RULE_shakePackageDeclaration = 17, 
		RULE_shakeImportDeclaration = 18, RULE_shakeFunDeclaration = 19, RULE_shakeFieldDeclaration = 20, 
		RULE_shakeConstructorDeclaration = 21, RULE_shakeClassChild = 22, RULE_shakeClassContents = 23, 
		RULE_superClassList = 24, RULE_shakeClassDeclaration = 25, RULE_shakeStatement = 26, 
		RULE_shakeVarDeclaration = 27, RULE_shakeWhile = 28, RULE_shakeDoWhile = 29, 
		RULE_shakeFor = 30, RULE_shakeIf = 31, RULE_shakeValue = 32, RULE_shakeAssignment = 33, 
		RULE_shakeLogicalOr = 34, RULE_shakeLogicalXor = 35, RULE_shakeLogicalAnd = 36, 
		RULE_shakeBitwiseOr = 37, RULE_shakeBitwiseXor = 38, RULE_shakeBitwiseAnd = 39, 
		RULE_shakeEquality = 40, RULE_shakeRelation = 41, RULE_shakeShift = 42, 
		RULE_shakeAddition = 43, RULE_shakeMultiplication = 44, RULE_shakePower = 45, 
		RULE_shakeCast = 46, RULE_shakeAccess = 47, RULE_shakeMandory = 48, RULE_shakeSign = 49, 
		RULE_shakePriority = 50, RULE_shakeLiteral = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"shakeIdentifier", "shakeModifier", "shakeModifierList", "shakeNamespace", 
			"shakeType", "genericDeclaration", "genericsDeclaration", "funArgs", 
			"funArgDeclaration", "shakeBlock", "shakeBlockChild", "shakeArgument", 
			"shakeArguments", "shakeTypeArgument", "shakeTypeArguments", "shakeFile", 
			"shakeFileChild", "shakePackageDeclaration", "shakeImportDeclaration", 
			"shakeFunDeclaration", "shakeFieldDeclaration", "shakeConstructorDeclaration", 
			"shakeClassChild", "shakeClassContents", "superClassList", "shakeClassDeclaration", 
			"shakeStatement", "shakeVarDeclaration", "shakeWhile", "shakeDoWhile", 
			"shakeFor", "shakeIf", "shakeValue", "shakeAssignment", "shakeLogicalOr", 
			"shakeLogicalXor", "shakeLogicalAnd", "shakeBitwiseOr", "shakeBitwiseXor", 
			"shakeBitwiseAnd", "shakeEquality", "shakeRelation", "shakeShift", "shakeAddition", 
			"shakeMultiplication", "shakePower", "shakeCast", "shakeAccess", "shakeMandory", 
			"shakeSign", "shakePriority", "shakeLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'\\n'", "';'", "','", "':'", "'.'", null, null, null, null, 
			null, "'abstract'", "'as'", "'class'", "'const'", "'constructor'", "'do'", 
			"'else'", "'enum'", "'false'", "'final'", "'for'", "'fun'", "'if'", "'import'", 
			"'in'", "'inline'", "'instanceof'", "'interface'", "'native'", "'null'", 
			"'object'", "'operator'", "'override'", "'package'", "'private'", "'protected'", 
			"'public'", "'return'", "'static'", "'super'", "'synchronized'", "'this'", 
			"'true'", "'val'", "'var'", "'while'", null, null, null, null, null, 
			null, "'**='", "'%='", "'/='", "'*='", "'-='", "'+='", "'++'", "'--'", 
			"'**'", "'%'", "'/'", "'*'", "'-'", "'+'", "'||'", "'&&'", "'^^'", "'=='", 
			"'>='", "'<='", "'!='", "'>'", "'<'", "'!'", "'~&'", "'~|'", "'~^'", 
			"'~'", "'&'", "'|'", "'^'", "'='", "'('", "')'", "'{'", "'}'", "'['", 
			"']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "LINE_SEPARATOR", "SEMICOLON", "COMMA", "COLON", "DOT", "FLOAT", 
			"HEX_NUMBER", "OCT_NUMBER", "BIN_NUMBER", "INTEGER", "KEYWORD_ABSTRACT", 
			"KEYWORD_AS", "KEYWORD_CLASS", "KEYWORD_CONST", "KEYWORD_CONSTRUCTOR", 
			"KEYWORD_DO", "KEYWORD_ELSE", "KEYWORD_ENUM", "KEYWORD_FALSE", "KEYWORD_FINAL", 
			"KEYWORD_FOR", "KEYWORD_FUN", "KEYWORD_IF", "KEYWORD_IMPORT", "KEYWORD_IN", 
			"KEYWORD_INLINE", "KEYWORD_INSTANCEOF", "KEYWORD_INTERFACE", "KEYWORD_NATIVE", 
			"KEYWORD_NULL", "KEYWORD_OBJECT", "KEYWORD_OPERATOR", "KEYWORD_OVERRIDE", 
			"KEYWORD_PACKAGE", "KEYWORD_PRIVATE", "KEYWORD_PROTECTED", "KEYWORD_PUBLIC", 
			"KEYWORD_RETURN", "KEYWORD_STATIC", "KEYWORD_SUPER", "KEYWORD_SYNCHRONIZED", 
			"KEYWORD_THIS", "KEYWORD_TRUE", "KEYWORD_VAL", "KEYWORD_VAR", "KEYWORD_WHILE", 
			"IDENTIFIER", "IDENTIFIER2", "STRING", "CHAR", "SINGLE_LINE_COMMENT", 
			"MULTILINE_COMMENT", "POW_ASSIGN", "MOD_ASSIGN", "DIV_ASSIGN", "MUL_ASSIGN", 
			"SUB_ASSIGN", "ADD_ASSIGN", "INCR", "DECR", "POW", "MOD", "DIV", "MUL", 
			"SUB", "ADD", "LOGIC_OR", "LOGIC_AND", "LOGIC_XOR", "EQUALS", "GTE", 
			"LTE", "NEQ", "GT", "LT", "LOGIC_NOT", "BIT_NAND", "BIT_NOR", "BIT_XNOR", 
			"BIT_NOT", "BIT_AND", "BIT_OR", "BIT_XOR", "ASSIGN", "LPAREN", "RPAREN", 
			"LCURLY", "RCURLY", "LBRACK", "RBRACK"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ShakeParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShakeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShakeIdentifierContext extends ParserRuleContext {
		public Token identifier;
		public TerminalNode IDENTIFIER() { return getToken(ShakeParser.IDENTIFIER, 0); }
		public TerminalNode IDENTIFIER2() { return getToken(ShakeParser.IDENTIFIER2, 0); }
		public ShakeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shakeIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).enterShakeIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).exitShakeIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShakeParserVisitor ) return ((ShakeParserVisitor<? extends T>)visitor).visitShakeIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShakeIdentifierContext shakeIdentifier() throws RecognitionException {
		ShakeIdentifierContext _localctx = new ShakeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_shakeIdentifier);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(104);
				((ShakeIdentifierContext)_localctx).identifier = match(IDENTIFIER);
				}
				}
				break;
			case IDENTIFIER2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(105);
				((ShakeIdentifierContext)_localctx).identifier = match(IDENTIFIER2);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShakeModifierContext extends ParserRuleContext {
		public TerminalNode KEYWORD_PUBLIC() { return getToken(ShakeParser.KEYWORD_PUBLIC, 0); }
		public TerminalNode KEYWORD_PRIVATE() { return getToken(ShakeParser.KEYWORD_PRIVATE, 0); }
		public TerminalNode KEYWORD_PROTECTED() { return getToken(ShakeParser.KEYWORD_PROTECTED, 0); }
		public TerminalNode KEYWORD_STATIC() { return getToken(ShakeParser.KEYWORD_STATIC, 0); }
		public TerminalNode KEYWORD_FINAL() { return getToken(ShakeParser.KEYWORD_FINAL, 0); }
		public TerminalNode KEYWORD_ABSTRACT() { return getToken(ShakeParser.KEYWORD_ABSTRACT, 0); }
		public TerminalNode KEYWORD_NATIVE() { return getToken(ShakeParser.KEYWORD_NATIVE, 0); }
		public TerminalNode KEYWORD_SYNCHRONIZED() { return getToken(ShakeParser.KEYWORD_SYNCHRONIZED, 0); }
		public TerminalNode KEYWORD_INLINE() { return getToken(ShakeParser.KEYWORD_INLINE, 0); }
		public TerminalNode KEYWORD_OVERRIDE() { return getToken(ShakeParser.KEYWORD_OVERRIDE, 0); }
		public TerminalNode KEYWORD_OPERATOR() { return getToken(ShakeParser.KEYWORD_OPERATOR, 0); }
		public ShakeModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shakeModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).enterShakeModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).exitShakeModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShakeParserVisitor ) return ((ShakeParserVisitor<? extends T>)visitor).visitShakeModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShakeModifierContext shakeModifier() throws RecognitionException {
		ShakeModifierContext _localctx = new ShakeModifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_shakeModifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 6005574340608L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShakeModifierListContext extends ParserRuleContext {
		public List<ShakeModifierContext> shakeModifier() {
			return getRuleContexts(ShakeModifierContext.class);
		}
		public ShakeModifierContext shakeModifier(int i) {
			return getRuleContext(ShakeModifierContext.class,i);
		}
		public ShakeModifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shakeModifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).enterShakeModifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).exitShakeModifierList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShakeParserVisitor ) return ((ShakeParserVisitor<? extends T>)visitor).visitShakeModifierList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShakeModifierListContext shakeModifierList() throws RecognitionException {
		ShakeModifierListContext _localctx = new ShakeModifierListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_shakeModifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6005574340608L) != 0)) {
				{
				{
				setState(110);
				shakeModifier();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShakeNamespaceContext extends ParserRuleContext {
		public ShakeIdentifierContext identifier;
		public Token dot;
		public ShakeNamespaceContext child;
		public ShakeIdentifierContext shakeIdentifier() {
			return getRuleContext(ShakeIdentifierContext.class,0);
		}
		public TerminalNode DOT() { return getToken(ShakeParser.DOT, 0); }
		public ShakeNamespaceContext shakeNamespace() {
			return getRuleContext(ShakeNamespaceContext.class,0);
		}
		public ShakeNamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shakeNamespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).enterShakeNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).exitShakeNamespace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShakeParserVisitor ) return ((ShakeParserVisitor<? extends T>)visitor).visitShakeNamespace(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShakeNamespaceContext shakeNamespace() throws RecognitionException {
		ShakeNamespaceContext _localctx = new ShakeNamespaceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_shakeNamespace);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(116);
				((ShakeNamespaceContext)_localctx).identifier = shakeIdentifier();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(117);
				((ShakeNamespaceContext)_localctx).identifier = shakeIdentifier();
				}
				{
				setState(118);
				((ShakeNamespaceContext)_localctx).dot = match(DOT);
				}
				{
				setState(119);
				((ShakeNamespaceContext)_localctx).child = shakeNamespace();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShakeTypeContext extends ParserRuleContext {
		public ShakeNamespaceContext namespace;
		public ShakeNamespaceContext shakeNamespace() {
			return getRuleContext(ShakeNamespaceContext.class,0);
		}
		public ShakeTypeArgumentsContext shakeTypeArguments() {
			return getRuleContext(ShakeTypeArgumentsContext.class,0);
		}
		public ShakeTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shakeType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).enterShakeType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).exitShakeType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShakeParserVisitor ) return ((ShakeParserVisitor<? extends T>)visitor).visitShakeType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShakeTypeContext shakeType() throws RecognitionException {
		ShakeTypeContext _localctx = new ShakeTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_shakeType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(123);
			((ShakeTypeContext)_localctx).namespace = shakeNamespace();
			}
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(124);
				shakeTypeArguments();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GenericDeclarationContext extends ParserRuleContext {
		public ShakeIdentifierContext name;
		public Token colon;
		public ShakeTypeContext type;
		public ShakeIdentifierContext shakeIdentifier() {
			return getRuleContext(ShakeIdentifierContext.class,0);
		}
		public TerminalNode COLON() { return getToken(ShakeParser.COLON, 0); }
		public ShakeTypeContext shakeType() {
			return getRuleContext(ShakeTypeContext.class,0);
		}
		public GenericDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).enterGenericDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShakeParserListener ) ((ShakeParserListener)listener).exitGenericDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShakeParserVisitor ) return ((ShakeParserVisitor<? extends T>)visitor).visitGenericDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GenericDeclarationContext genericDeclaration() throws RecognitionException {
		GenericDeclarationContext _localctx = new GenericDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_genericDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(127);
			((GenericDeclarationContext)_localctx).name = shakeIdentifier();
			}
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				{
				setState(128);
				((GenericDeclarationContext)_localctx).colon = match(COLON);
				}
				{
				setState(129);
				((GenericDeclarationContext)_localctx).type = shakeType();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
